# MLandViz

./: README.md  automate_news.py  read.md  theme.json  tutorial.html  website.py
archive scripts/: automate_news.py  send_emails.py  website.py
battery_model/: Untitled.ipynb  data_preprocess.py  datapreprocess.py  demo.py  model.py  model_tuning.py  model_v2.py  pipeline.py
battery_model/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  model_v2-checkpoint.py
battery_model/deeplearning/: tutorial.py
battery_model/machinelearning/: .zshrc  model_tuning.py
battery_model/modeling/: 1_how_to_run_model.py  2_compare_multiple_model.py  3_basicplotting.py
battery_visual/: battery_ml.py  plot_helper.py  plotting.py
dependencies/: pyproject.toml
poetry_dependenceis/: pyproject.toml
templates/: about.html  contact_us.html  home.html  tutorial.html
