[tool.poetry]
name = "model-env"
version = "0.1.0"
description = ""
authors = ["Quan Ha <quanhan.anh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
plotly = "^5.22.0"
jupyter = "^1.0.0"
imbalanced-learn = "^0.12.3"
poetry = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

